css/main.css
/* @import url('https://fonts.googleapis.com/css?family=Roboto:400,900,900i'); */
@import url('https://fonts.googleapis.com/css?family=Exo+2:400,400i,600,600i,700,700i|Lato:700,900');

body, html {
    height: 100%;
    margin: 0;
    color: white;
}

.fp-tableCell{
    overflow: hidden;
}

#wallpaper {
    display: block;
    z-index: -1;
    position: absolute;
    margin: 0;
    width: 100%;
    height: 100%;
}

#left {
    position: fixed;
    top:0;
    /* min-width: 40%; */
    width: auto;
    /* margin-left: -2%; */
    left: calc(-480px + 30vw);
    height: 101.4vh;
    z-index: 1;
    overflow: hidden;
}

.container {
    text-align: left;
    
    /* padding-top: 10%; */
    padding-left: 30%;
    padding-top:1px;
    height: 100%;
    width: 70%;
    margin: 0;
    background: white;
    color: black;
    font-family: 'Roboto', sans-serif;
}

.container h1{
    font-family: 'Lato', sans-serif;
    /* font-weight: bold; */
    text-transform: uppercase;
    text-align: center;
    margin: 0;
    color: #3F2A2A;
}

.container h2{
    text-align: center;
    margin-top: 40px;    
    font-weight: 600;
    font-family: 'Exo 2', sans-serif;
    color: #5D5555;
}

.container p{

    width: 68%;
    margin-right: auto;
    margin-left: auto;
    font-family: 'Exo 2', sans-serif;
    letter-spacing: 0.5px;
    font-weight: 400;
    color: #5D5555;
    line-height: 22px;
    font-size: 1.2em;
    margin-top: 40px;
}

/* 
.cta {
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
    font-size: 1.6em;
    padding: .8em 3em;
    color: white;
    background: #002c6a;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: .2em;
    padding: 8px 50px;
    text-align: center;
    font-weight: bold;
    border-radius: 4px;
}

.cta:hover {
    background: #024aaf;
    transition: 0.3s;
} */


.social{
    margin-top:40px;
}
.social ul {
    list-style-type: none;
    float: none;
    height: 50px;
    width: 200px;
    padding-left: 0%;
    margin: auto;
}

.social ul li {
    float: left;
}

.social ul li a {
    float: right;
    display: block;
    padding-left: 1em;
    margin: 0;
    text-decoration: none;
} 

.social ul li a:hover{
    filter: invert(40%);
    transition-duration: 0.3s;
    transition-timing-function: ease-out;
}

.social ul li a img{
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.numbers {
    background-image: url(images/row_home.svg);
    background-repeat: no-repeat;
    background-size: cover;
    padding-left: 80px;
    margin-left: -80px;
    margin-top: 3vh;
    width:100%;
    height: 130px;
}

.stats{
    height: 60px;
    width: 400px;
    padding-top: 20px;
    margin: auto;
}

.stat{
    box-sizing: border-box;
    width: 100px;
    float: left;
    text-align: center;
    color: #3F2A2A;
    border-left: 3px solid #707070;
  }
  .stat .label{
    display: block;
    text-transform: uppercase;
    font-weight: 400;
    font-size: 50px;
    letter-spacing: 1px;
    color: #3F2A2A;
    
    font-family: 'Lato', sans-serif;
  }

  .stat .label sup{
      font-size: 0.3em;
      vertical-align: 28px;
      text-transform: lowercase;
      font-weight: 900;
  }
  
  .stat .value{
    display: block;
    font-weight: 700;
    font-size: 18px;
    margin-top: 5px;
    font-family: 'Exo 2', sans-serif;
    font-weight: 500;

  }


/* NAVIGATION HEADER! */

nav.header {
    background: #002C6A;
    height: 50px;
    position: fixed;
    width: 100%;
    z-index: 3;
}

.header h5{
    position: absolute;
    margin-left: 20px;
    color: white;
    font-weight: normal;
    font-size: 1em;
    line-height: 50px;
    margin-top: 0px;
    font-family: 'Exo 2', sans-serif;
}

.download {
    width:180px;
    height:20px;
    margin-top: -5px;
    padding: 3px 3px 3px 3px;
    text-align: center;
    border: 1px solid white;
    color: white;
    margin-right: -20px;
    font-family: 'Exo 2', sans-serif;
    letter-spacing: 1.5px;
    font-size: 1em
}

.download:hover{
    background-color: #024aaf;
    transition-duration: 0.3s;
    transition-timing-function: ease-out;
}

.homelink {
    position: relative;
    width:220px;
    height:20px;
    margin-top: -5px;
    padding: 1px 3px 3px 3px;
    text-align: center;
    border: 1px solid white;
    color: white;
    margin-right: -20px;
    font-family: 'Exo 2', sans-serif;
    letter-spacing: 1.5px;
    font-size: 1em
}

nav.header ul {
    list-style-type: none;
    float: right;
    margin-right: 2.5em;
}

nav.header ul li {
    float: left;
}

nav.header ul li a {
    float: right;
    display: block;
    padding-left: 1em;
    margin: 0;
    text-decoration: none;
} 

.vertical-menu {
    width: 110px; /* Set a width if you like */
    z-index: 2;
    position: absolute;
    margin-top: 63vh;
}

.vertical-menu a {
    display: inline;
    margin-left: 1.6em;
    font-size: 1.4em;
    font-family: 'Exo 2', sans-serif;
    color: white; /* Black text color */
    font-weight: normal;
    letter-spacing: 1px;
    display: block; /* Make the links appear below each other */
    padding-left: 18px; /* Add some padding */
    
    padding-bottom: 1em;
    text-decoration: none; /* Remove underline from links */
    position: relative;
    text-transform: lowercase;  
}
/* 
.vertical-menu a:hover {
    transition: 0.3s;
} */    
.vertical-menu a:after {
    content: "";
    position: absolute;
    z-index: -1;
    left: 18px;
    width: 0;
    bottom: .5em;
    background: white;
    height: 4px;
    transition-property: width;
    transition-duration: 0.3s;
    transition-timing-function: ease-out;
}
.vertical-menu a:hover:after,
.vertical-menu a:focus:after,
.vertical-menu a:active:after {
    width: 140%;
}

.vertical-menu a.bloglink:hover:after,
.vertical-menu a.bloglink:focus:after,
.vertical-menu a.bloglink:active:after {
    width: 70%;
}

.profile {
    display: block;
    width: 120px;
    margin-left: 90%;
    margin-top: 10%;
} 

#nameTop{
    margin-top: -100px;
    font-size:8.5em;
    letter-spacing: 8px;
    user-select: none;
}

#nameBottom{
    margin-top: -25px;
    letter-spacing: 12px;
    font-size: 2.7em;
    user-select: none;
}

@media (max-width: 1000px) {
    #nameTop{
        top: 0;
        /* margin-top: -150px; */
    }
    #nameBottom{
        font-size: 40px;
    }
    .container{
        padding: 0;
        text-align: left;
        height: 100%;
        width: 100%;
        margin: 0;
        background: white;
    }

    .vertical-menu{
        visibility: hidden;
    }
    .container h1, .social{
        width: 100vw;
        margin-left: auto;
        margin-right: auto;
    }
    .container h2{
        width: 85vw;
        margin-left: 7.5vw;
        margin-right: 7.5vw;
        font-size: 18px;
        margin-top: 20px;
    }
    .container p{
        max-width: 1100px;
        width: 87%;
        margin: auto;
        font-size: 16px;
    }
    #left{
        visibility: hidden;
    }
    .numbers{
        padding: 0;
        margin:0;
        height: 90px;
    }

    .stat .label{
        font-size: 40px;
    }

    .stat .value{
        font-size: 14px;
    }
    .stats {
        padding-top: 10px;
        width: 100%;
        max-width: 400px;
    }
    .stat{
        width: 25%;
        max-width: 100px;
    }
    .social{
        margin-top: 20px;
    }

    /* NAV PROPERTIES */
    .header h5{
        visibility: hidden;
    }
}

@media (min-width: 700px) {
    #nameTop{
        margin-top: 50px;
    }
}

@media (min-width: 768px){
    nav.header{
        position: relative;
    }
}

